FLWR-09: Implement sales business logic